// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Generate filter data: Date > property:["type = date"] 1`] = `
{
  "operators": {
    "Number": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "大于",
        "style": "noop",
        "value": "greater_than",
      },
      {
        "label": "大于等于",
        "style": "noop",
        "value": "greater_than_equal",
      },
      {
        "label": "小于",
        "style": "noop",
        "value": "less_than",
      },
      {
        "label": "小于等于",
        "style": "noop",
        "value": "less_than_equal",
      },
      {
        "label": "区间",
        "style": "range",
        "value": "between",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "date",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Number",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Date > property:["type = daterange"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "daterange",
      },
      "excludeOperator": {
        "operator": [
          "contains",
          "not_contain",
        ],
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Text",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Date > property:["type = dates"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "dates",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Text",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Date > property:["type = datetime"] 1`] = `
{
  "operators": {
    "Number": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "大于",
        "style": "noop",
        "value": "greater_than",
      },
      {
        "label": "大于等于",
        "style": "noop",
        "value": "greater_than_equal",
      },
      {
        "label": "小于",
        "style": "noop",
        "value": "less_than",
      },
      {
        "label": "小于等于",
        "style": "noop",
        "value": "less_than_equal",
      },
      {
        "label": "区间",
        "style": "range",
        "value": "between",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "datetime",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Number",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Textarea > property:["type = date"] 1`] = `
{
  "operators": {
    "Number": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "大于",
        "style": "noop",
        "value": "greater_than",
      },
      {
        "label": "大于等于",
        "style": "noop",
        "value": "greater_than_equal",
      },
      {
        "label": "小于",
        "style": "noop",
        "value": "less_than",
      },
      {
        "label": "小于等于",
        "style": "noop",
        "value": "less_than_equal",
      },
      {
        "label": "区间",
        "style": "range",
        "value": "between",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "date",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Number",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Textarea > property:["type = daterange"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "daterange",
      },
      "excludeOperator": {
        "operator": [
          "contains",
          "not_contain",
        ],
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Text",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Textarea > property:["type = dates"] 1`] = `
{
  "operators": {
    "Text": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "包含",
        "style": "tags",
        "value": "contains",
      },
      {
        "label": "不包含",
        "style": "tags",
        "value": "not_contain",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "dates",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Text",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;

exports[`Generate filter data: Textarea > property:["type = datetime"] 1`] = `
{
  "operators": {
    "Number": [
      {
        "label": "等于",
        "style": "noop",
        "value": "equal",
      },
      {
        "label": "不等于",
        "style": "noop",
        "value": "not_equal",
      },
      {
        "label": "大于",
        "style": "noop",
        "value": "greater_than",
      },
      {
        "label": "大于等于",
        "style": "noop",
        "value": "greater_than_equal",
      },
      {
        "label": "小于",
        "style": "noop",
        "value": "less_than",
      },
      {
        "label": "小于等于",
        "style": "noop",
        "value": "less_than_equal",
      },
      {
        "label": "区间",
        "style": "range",
        "value": "between",
      },
      {
        "label": "为空",
        "style": "none",
        "value": "empty",
      },
      {
        "label": "不为空",
        "style": "none",
        "value": "not_empty",
      },
    ],
  },
  "options": [
    {
      "datePanel": {
        "excludeManuals": -1,
        "excludeShortcuts": -1,
        "pickerType": "datetime",
      },
      "includeOperator": {
        "dateOperator": [
          "date",
        ],
      },
      "label": "Date",
      "operatorKey": "Number",
      "renderType": "DATE",
      "value": "mczJoB7trWElolPW48BEm",
    },
  ],
}
`;
